fix: Vertical Alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -45,4 +45,7 @@ body {
 }
 
 @media (max-width: 768px) {}
-  
+
+div, a {
+    outline: none;
+}
